# sc2_macro_machine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  build.sh  codebuild_all_tests.yaml  codebuild_asan.yaml  codebuild_main.yaml  codebuild_test_asan.yaml  fix_timestamps.sh  ladderbots.json
bot/: BaseLocationManager.cpp  BuildManager.h  BuildOrderQueue.cpp  BuildingManager.cpp  BuildingManager.h  BuildingPlacer.cpp  CCBot.cpp  CCBot.h  CMakeLists.txt  CombatCommander.cpp  Common.h  Condition.cpp  DistanceMap.cpp  GameCommander.cpp  GameCommander.h  LadderInterface.h  MacroManager.cpp  MacroManager.h  MapTools.cpp  MeleeManager.cpp  MetaType.cpp  ProductionManager.h  RangedManager.cpp  RangedManager.h  ScoutManager.cpp  Squad.cpp  Squad.h  SquadData.cpp  StrategyManager.cpp  SupplyBuildManager.cpp  SupplyBuildManager.h  TechTree.cpp  Unit.cpp  UnitData.cpp  UnitData.h  UnitHireManager.cpp  UnitHireManager.h  UnitInfoManager.cpp  UnitInfoManager.h  UnitType.cpp  (+7 more)
bot/cannons/: BaseAnalysis.cpp  BaseAnalysis.h  BasicAnalyser.cpp  BasicAnalyser.h  PylonPlacement.cpp  PylonPlacement.h
bot/general/: BaseLocation.cpp  BaseLocation.h  BaseLocationManager.cpp  CCBot.cpp  CCBot.h  DistanceMap.cpp  DistanceMap.h  ExactDistanceMap.cpp  ExactDistanceMap.h  MapMeta.cpp  MapMeta.h  MapTools.cpp  MapTools.h  ObservedTech.cpp  ObservedTech.h  TechTree.cpp  TechTree.h  ThreatAnalyzer.cpp  ThreatAnalyzer.h  UnitData.cpp  UnitData.h  UnitInfoManager.cpp  UnitInfoManager.h  WorkerData.cpp  WorkerData.h  WorkerManager.cpp  WorkerManager.h  WorkerManager_L.cpp  WorkerManager_L.h
bot/general/bases/: BaseLocation.cpp  BaseLocation.h  BaseLocationManager.cpp  BaseLocationManager.h
bot/general/influence/: AbstractInfluenceMap.cpp  AbstractInfluenceMap.h  ThreatEstimatingInfluenceMap.cpp  ThreatEstimatingInfluenceMap.h
bot/general/managers/: Managers.cpp  Managers.h
bot/general/managers/base/: Base.cpp  Base.h  BasesManager.cpp  BasesManager.h
bot/general/managers/buildings/: BuildingManager.cpp  BuildingManager.h  WallManager.cpp  WallManager.h
bot/general/managers/economy/: EconomyManager.cpp  EconomyManager.h
bot/general/managers/enemy/: EnemyManager.cpp  EnemyManager.h
bot/general/managers/resources/: Mineral.cpp  Mineral.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h
bot/general/managers/squads/: SquadManager.cpp  SquadManager.h
bot/general/managers/workers/: BaseWorkers.cpp  BaseWorkers.h  WorkerManager.cpp  WorkerManager.h
bot/general/map_meta/: MapMeta.cpp  MapMeta.h  StaticMapMeta.cpp  StaticMapMeta.h  WallCandidateVerifier.cpp  WallCandidateVerifier.h  WallPlacement.cpp  WallPlacement.h  WallVerifier.cpp  WallVerifier.h
bot/general/map_meta/scouting/: ScoutingKeypoints.cpp
bot/general/map_meta/wall/: GraphCheckResult.h  GraphChecker.cpp  GraphChecker.h  WallCandidateVerifier.cpp  WallCandidateVerifier.h  WallPlacement.cpp  WallPlacement.h  WallVerifier.cpp  WallVerifier.h
bot/general/model/: Common.h  MetaType.cpp  MetaType.h  Unit.cpp  Unit.h  UnitType.cpp  UnitType.h
bot/general/units/: UnitCommandManager.cpp  UnitCommandManager.h  UnitInfoManager.cpp  UnitInfoManager.h
bot/logging/: Events.cpp  Events.h
bot/macro/: BuildOrderItem.h  BuildingManager.cpp  BuildingManager.h  BuildingManager_L.cpp  BuildingManager_L.h  BuildingPlacer.cpp  BuildingPlacer.h  MacroManager.cpp  MacroManager.h
bot/macro/build_managers/: AggressiveTechBuildManager.cpp  AggressiveTechBuildManager.h  BuildManager.cpp  BuildManager.h  ForgeBuildManager.cpp  ForgeBuildManager.h  ProductionManager.cpp  ProductionManager.h  SupplyBuildManager.cpp  SupplyBuildManager.h  TechBuildManager.cpp  TechBuildManager.h  UnitHireManager.cpp  UnitHireManager.h  WorkerBuildManager.h
bot/macro/build_managers/economy/: EconomyBuildManager.cpp  EconomyBuildManager.h  ExpandBuildManager.cpp  ExpandBuildManager.h  GasBuildManager.cpp  GasBuildManager.h  WorkerBuildManager.cpp  WorkerBuildManager.h
bot/macro/buildings/: Building.cpp  Building.h  BuildingData.h  BuildingManager.cpp  BuildingManager.h  BuildingPlacer.cpp  BuildingPlacer.h  BuildingPlacer_L.cpp  BuildingPlacer_L.h  BuildingTask.cpp  BuildingTask.h
bot/micro/: CombatCommander.cpp  CombatCommander.h  CombatManager.cpp  CombatManager.h  MeleeManager.cpp  MeleeManager.h  MicroManager.cpp  MicroManager.h  RangedManager.cpp  RangedManager.h  ScoutManager.cpp  ScoutManager.h  Squad.cpp  Squad.h  SquadData.cpp  SquadData.h  SquadOrder.h  Squad_L.cpp  Squad_L.h
bot/micro/modules/: BoostModule.cpp  BoostModule.h  ChronoBoostModule.cpp  ChronoBoostModule.h
bot/micro/modules/cannons/: CannonStartModule.cpp  CannonStartModule.h
bot/micro/modules/scout/: ScoutModule.cpp  ScoutModule.h
bot/micro/order/: Order.cpp  Order.h  Orders.h
bot/micro/order/attack/: AdeptHarassWorkers.cpp  AdeptHarassWorkers.h  AttackOrder.cpp  AttackOrder.h  AttackWithKiting.cpp  AttackWithKiting.h  SimplePrismJuggleOrder.cpp  SimplePrismJuggleOrder.h
bot/micro/order/cannons/: FirstPylonPlacementOrder.cpp  FirstPylonPlacementOrder.h
bot/micro/order/commands/: Commands.cpp  Commands.h
bot/micro/order/default/: EmptyOrder.cpp  (+1 more)
bot/micro/squads/: Squad.cpp  Squad.h  SquadManager.cpp  SquadManager.h
bot/micro/util/: MicroUtil.cpp  MicroUtil.h
bot/protos/: map_meta.proto
bot/src/: BotConfig.cpp  BotConfig.h
bot/src/general/: CCBot.h  DistanceMap.h  MapTools.cpp  MapTools.h  TechTree.h
bot/src/macro/: BuildOrderItem.cpp  MacroManager.cpp
bot/src/micro/: CombatManager.h
bot/src/util/: BotAssert.cpp  JSONTools.h  LogInfo.h  Timer.hpp
bot/strategy/: Strategy.cpp  Strategy.h
bot/util/: BotAssert.cpp  BotAssert.h  FileUtils.cpp  FileUtils.h  JSONTools.cpp  JSONTools.h  LogInfo.cpp  LogInfo.h  Util.cpp  Util.h  Version.h  robin_hood.h
meta-calculator/: CMakeLists.txt  build.sh  main.cpp
static-meta-calculator/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
test/common/: ScenarioResult.h  TestAgent.cpp  TestAgent.h  TestRunner.cpp  TestRunner.h  TestScenario.h
test/scenarios/: Scenarios.h
(+83 files in other folders)
